--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@tabler/icons-react": "^2.40.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
-    "next": "14.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "^14.0.3",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.33.0"
   },
   "devDependencies": {
