--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@mantine/carousel": "^7.2.2",
     "@mantine/core": "7.2.2",
+    "@mantine/dates": "^7.3.1",
     "@mantine/hooks": "7.2.2",
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
+    "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "eslint-config-next": "^14.0.3",
